k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-db
---
apiVersion: v1
kind: Namespace
metadata:
  name: nest-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-proxy
