k8s/mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
  labels:
    app: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db-container
        image: mongo:latest
        ports:
        - containerPort: 27017
