k8s/nest-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-app-deployment
  namespace: nest-app
  labels:
    app: nest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-app
  template:
    metadata:
      labels:
        app: nest-app
    spec:
      containers:
      - name: nest-app-container
        image: dominikzawrotny/nest-app:v1.0
      # - name: nest-app-container
      #   image: nginx:latest
        ports:
        - containerPort: 3000
