k8s/nest-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-deployment
  labels:
    app: nest-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest-app
  template:
    metadata:
      labels:
        app: nest-app
    spec:
      containers:
      - name: nest-app-container
        image: dominikzawrotny/kaholo-devops-test:v0.2
        ports:
        - containerPort: 3000
