k8s/mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-svc
  namespace: mongo-db
spec:
  selector:
    app: mongo-db
  ports:
  - port: 27017
    targetPort: 27017
