k8s/nest-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-svc
  namespace: nest-app
spec:
  type: LoadBalancer
  selector:
    app: nest-app
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
