k8s/nest-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-app-ingress
  namespace: nest-app
spec:
  rules:
  - host: my-app.local
    http:
      paths:
      - path: /cats
        pathType: Prefix
        backend:
          service:
            name: nest-app-svc
            port:
              number: 3000
